--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <!-- leap keys for expenditure management -->
     <string name="pref_key_last_synced_balance" translatable="false">pref_key_last_synced_balance</string>
     <string name="pref_key_curr_synced_balance" translatable="false">pref_key_curr_synced_balance</string>
+    <string name="pref_key_current_balance" translatable="false">pref_key_current_balance</string>
 
     <!-- Miscellaneous -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -138,6 +139,8 @@
     <string name="cost_fares">Cost:</string>
 
     <!-- expenditures -->
+    <string name="topup">Top Up</string>
+    <string name="amend">Amend</string>
     <string name="time_added">Time Added</string>
     <string name="type">Type</string>
     <string name="leap_number">Leap Number</string>
@@ -272,4 +275,5 @@
     <string name="amend_leap_bal">Amend a Leap Balance</string>
     <string name="ensure_confirm_balance">Ensure you confirm your balance at a ticket machine or in a shop.</string>
     <string name="retrieving_currently_active_leap">Retrieving currently active Leap balance...</string>
+    <string name="on">" on "</string>
 </resources>
