--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -264,18 +264,18 @@
     <string name="online_bal_leap_dialog">Online Balance from Leap.ie</string>
     <string name="online_bal_reported">"The online balance is reported to be "</string>
     <string name="for_connective_report">" for "</string>
-    <string name="bal_may_not_be_accurate">This balance may not be accurate as online balances available on Leap.ie are updated every 24-48 hours.</string>
+    <string name="bal_may_not_be_accurate">This balance may not be accurate as online balances available on Leap.ie are updated every 24–48 hours.</string>
     <string name="connection_timed_out">Connection timed out</string>
     <string name="differing_balances">Differing Synced Balances</string>
     <string name="online_bal_leap_reported">"The online balance from Leap.ie is reported to be "</string>
     <string name="local_bal_is">", but the local balance is "</string>
     <string name="is_leap_correct">. Is the online balance from Leap.ie correct?</string>
-    <string name="bal_updated_successfully">Balance updated successfully (</string>
+    <string name="bal_updated_successfully">Balance updated successfully</string>
     <string name="unable_to_sync_bal">Unable to sync balance</string>
-    <string name="retrieving_leap_data">Retrieving data from Leap.ie...</string>
+    <string name="retrieving_leap_data">Retrieving data from Leap.ie…</string>
     <string name="amend_leap_bal">Amend a Leap Balance</string>
     <string name="ensure_confirm_balance">Ensure you confirm your balance at a ticket machine or in a shop.</string>
-    <string name="retrieving_currently_active_leap">Retrieving currently active Leap balance...</string>
+    <string name="retrieving_currently_active_leap">Retrieving currently active Leap balance…</string>
     <string name="on">" on "</string>
     <string name="overall_exp">Overall Expenditure</string>
     <string name="active_leap_card">Active Leap Card</string>
